--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,9 +9,11 @@ kapacitor_tick_work_dir: "/usr/local/etc/kapacitor/tick"
 kapacitor_tick_script_dest_dir: "{{ kapacitor_tick_work_dir }}/script"
 kapacitor_tick_template_dest_dir: "{{ kapacitor_tick_work_dir }}/template"
 kapacitor_tick_var_dest_dir: "{{ kapacitor_tick_work_dir }}/var"
+kapacitor_tick_topichandlers_dest_dir: "{{ kapacitor_tick_work_dir }}/topichandlers"
 kapacitor_tick_script_dir: './tests/files/tick/script'
 kapacitor_tick_template_dir: './tests/files/tick/template'
 kapacitor_tick_var_dir: './tests/files/tick/var'
+kapacitor_tick_topichandlers_dir: "./tests/files/tick/topichandlers"
 kapacitor_hostname: "{{ ansible_hostname }}"
 kapacitor_data_dir: "/var/lib/kapacitor"
 kapacitor_skip_config_overrides: false
