--- a/test/integration/default/ansible/default.yml
+++ b/test/integration/default/ansible/default.yml
@@ -14,6 +14,7 @@
       { id: "example", type: "stream", tick: "{{ kapacitor_tick_script_dest_dir }}/example.tick", dbrp: "telegraf.autogen", enabled: false },
       { id: "template_test", template: "example", vars: "{{ kapacitor_tick_var_dest_dir }}/example.json", dbrp: "telegraf.autogen", enabled: true },
     ]
+    kapacitor_tick_topichandlers_dir: '/tmp/kitchen/roles/ansible-kapacitor/test/files/tick/topichandlers'
     kapacitor_httppost:
       - endpoint: "example"
         url: "http://example.com"
